--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <h1>Portfolio 3</h1>
-
-<script scr="main.js"></script>
+<input type="text">
+<button> Logtext </button>
+<script src="main.js"></script>
 </body>
 </html>
