made and array that keeps track of guessed number and in html made a class that tells the guesses, also made a fun feature if u guess more then 19 times

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <p class="label-highscore">
             🥇 Highscore: <span class="highscore">0</span>
         </p>
+        <p class="guessesHistory">Guesses so far: None</p> <!-- This will display the guesses -->
     </section>
 </main>
 <script src="main.js"></script>
